--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 <body onload="Loop();">
   <input id="Q" type="text">
   <span id="A">Output</span>
+  <button onclick="window.open('https://duckduckgo.com/?q=frogs&t=opera&ia=images&iax=images', '_blank')">Frogs</button>
 </body>
 </html>
